--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/public/programing_2572737.png" />
+    <meta name="google-site-verification" content="Un2-gOZN5jjrTZbQ1cvlqvfQQvWzqPJ6KYSgajfuVcc" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
