Modified image sizes, renamed index.html, and added contact message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="I'm a passionate web developer focused on creating dynamic, user-centered digital experiences. I specialize in building functional, responsive websites..."
     />
-    <title>Portfolio</title>
+    <title>Diana's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
